[metadata]
name = eclcli
version = 4.1.0
summary = CLI for Enterprise Cloud 2.0
description-file =
    README.rst
license = Apache License, Version 2.0
author = NTT Communications
home-page = https://ecl.ntt.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages =
    eclcli

[entry_points]
console_scripts =
    ecl = eclcli.shell:main
keystoneclient.auth.plugin =
    token_endpoint = eclcli.api.auth_plugin:TokenEndpoint
ecl.cli =
    command_list = eclcli.common.module:ListCommand
    module_list = eclcli.common.module:ListModule
ecl.cli.base =
    compute = eclcli.compute.client
    identity = eclcli.identity.client
    image = eclcli.image.client
    network = eclcli.network.client
    volume = eclcli.volume.client
    bare = eclcli.bare.client
    storage = eclcli.storage.client
    rca = eclcli.rca.client
    sss = eclcli.sss.client
    monitoring = eclcli.monitoring.client
    dh = eclcli.dh.client
    icc = eclcli.provider_connectivity.client
    dns = eclcli.dns.client
    security = eclcli.security_order.client
    vnf = eclcli.vnf.client
    mlb = eclcli.mlb.client
ecl.common =
    compute_availability-zone_list = eclcli.common.availability_zone:ListAvailabilityZone
    compute_limits_show = eclcli.common.limits:ShowLimits
ecl.compute.v2 =
    compute_console-url_show = eclcli.compute.v2.console:ShowConsoleURL
    compute_flavor_list = eclcli.compute.v2.flavor:ListFlavor
    compute_flavor_show = eclcli.compute.v2.flavor:ShowFlavor
    compute_keypair_create = eclcli.compute.v2.keypair:CreateKeypair
    compute_keypair_delete = eclcli.compute.v2.keypair:DeleteKeypair
    compute_keypair_list = eclcli.compute.v2.keypair:ListKeypair
    compute_keypair_show = eclcli.compute.v2.keypair:ShowKeypair
    compute_server-volume_add = eclcli.compute.v2.server:AddServerVolume
    compute_server_create = eclcli.compute.v2.server:CreateServer
    compute_server_delete = eclcli.compute.v2.server:DeleteServer
    compute_server-image_create = eclcli.compute.v2.server:CreateServerImage
    compute_server_list = eclcli.compute.v2.server:ListServer
    compute_server-volume_remove = eclcli.compute.v2.server:RemoveServerVolume
    compute_server_resize = eclcli.compute.v2.server:ResizeServer
    compute_server_update = eclcli.compute.v2.server:SetServer
    compute_server_show = eclcli.compute.v2.server:ShowServer
    compute_server_start = eclcli.compute.v2.server:StartServer
    compute_server_stop = eclcli.compute.v2.server:StopServer
    compute_server_unset = eclcli.compute.v2.server:UnsetServer
    compute_server_fixed-ip_add = eclcli.compute.v2.server:AddFixedIP
    compute_server_fixed-ip_remove = eclcli.compute.v2.server:RemoveFixedIP
    compute_server_port_list = eclcli.compute.v2.server:ListPort
    compute_server_port_add = eclcli.compute.v2.server:AddPort
    compute_server_port_remove = eclcli.compute.v2.server:RemovePort
ecl.image.v2 =
    image_add-member = eclcli.image.v2.image:AddProjectToImage
    image_update-member = eclcli.image.v2.image:UpdateImageMember
    image_remove-member = eclcli.image.v2.image:RemoveProjectImage
    image_create = eclcli.image.v2.image:CreateImage
    image_delete = eclcli.image.v2.image:DeleteImage
    image_list = eclcli.image.v2.image:ListImage
    image_download = eclcli.image.v2.image:SaveImage
    image_show = eclcli.image.v2.image:ShowImage
    image_update = eclcli.image.v2.image:SetImage
    image_copy = eclcli.image.v2.image:CopyImage
    image_cancel-copy = eclcli.image.v2.image:CancelCopyImage
    image_copy-job-list = eclcli.image.v2.image:ListCopyImage
    image_copy-job-show = eclcli.image.v2.image:ShowCopyImage
ecl.network.v2 =
    network_logical-network_list = eclcli.network.v2.network:ListNetwork
    network_logical-network_show = eclcli.network.v2.network:ShowNetwork
    network_logical-network_create = eclcli.network.v2.network:CreateNetwork
    network_logical-network_update = eclcli.network.v2.network:SetNetwork
    network_logical-network_delete = eclcli.network.v2.network:DeleteNetwork
    network_subnet_list = eclcli.network.v2.subnet:ListSubnet
    network_subnet_show = eclcli.network.v2.subnet:ShowSubnet
    network_subnet_create = eclcli.network.v2.subnet:CreateSubnet
    network_subnet_update = eclcli.network.v2.subnet:SetSubnet
    network_subnet_delete = eclcli.network.v2.subnet:DeleteSubnet
    network_port_list = eclcli.network.v2.port:ListPort
    network_port_show = eclcli.network.v2.port:ShowPort
    network_port_create = eclcli.network.v2.port:CreatePort
    network_port_update = eclcli.network.v2.port:SetPort
    network_port_delete = eclcli.network.v2.port:DeletePort
    network_physical-port_list = eclcli.network.v2.physical_port:ListPhysicalPort
    network_physical-port_show = eclcli.network.v2.physical_port:ShowPhysicalPort
    network_reserved-address_list = eclcli.network.v2.reserved_address:ListReservedAddress
    network_reserved-address_show = eclcli.network.v2.reserved_address:ShowReservedAddress
    network_quota_show = eclcli.network.v2.quota:ShowQuota
    network_qos_list = eclcli.network.v2.qos_option:ListQosOption
    network_qos_show = eclcli.network.v2.qos_option:ShowQosOption
    network_inet-service_list = eclcli.network.v2.internet_service:ListInternetService
    network_inet-service_show = eclcli.network.v2.internet_service:ShowInternetService
    network_inet-gw_list = eclcli.network.v2.internet_gateway:ListInternetGateway
    network_inet-gw_show = eclcli.network.v2.internet_gateway:ShowInternetGateway
    network_inet-gw_create = eclcli.network.v2.internet_gateway:CreateInternetGateway
    network_inet-gw_update = eclcli.network.v2.internet_gateway:SetInternetGateway
    network_inet-gw_delete = eclcli.network.v2.internet_gateway:DeleteInternetGateway
    network_gw-interface_list = eclcli.network.v2.gateway_interface:ListGwInterface
    network_gw-interface_show = eclcli.network.v2.gateway_interface:ShowGwInterface
    network_gw-interface_create = eclcli.network.v2.gateway_interface:CreateGwInterface
    network_gw-interface_update = eclcli.network.v2.gateway_interface:SetGwInterface
    network_gw-interface_delete = eclcli.network.v2.gateway_interface:DeleteGwInterface
    network_public-ip_list = eclcli.network.v2.public_ip:ListPubicIP
    network_public-ip_show = eclcli.network.v2.public_ip:ShowPubicIP
    network_public-ip_create = eclcli.network.v2.public_ip:CreatePubicIP
    network_public-ip_update = eclcli.network.v2.public_ip:SetPubicIP
    network_public-ip_delete = eclcli.network.v2.public_ip:DeletePubicIP
    network_static-route_list = eclcli.network.v2.static_route:ListStaticRoute
    network_static-route_show = eclcli.network.v2.static_route:ShowStaticRoute
    network_static-route_create = eclcli.network.v2.static_route:CreateStaticRoute
    network_static-route_update = eclcli.network.v2.static_route:SetStaticRoute
    network_static-route_delete = eclcli.network.v2.static_route:DeleteStaticRoute
    network_fic-service_list = eclcli.network.v2.fic_service:ListFICService
    network_fic-service_show = eclcli.network.v2.fic_service:ShowFICService
    network_fic-gw_list = eclcli.network.v2.fic_gateway:ListFICGateway
    network_fic-gw_show = eclcli.network.v2.fic_gateway:ShowFICGateway
    network_fic-interface_list = eclcli.network.v2.fic_interface:ListFICInterface
    network_fic-interface_show = eclcli.network.v2.fic_interface:ShowFICInterface
    network_interdc-service_list = eclcli.network.v2.interdc_service:ListInterDCService
    network_interdc-service_show = eclcli.network.v2.interdc_service:ShowInterDCService
    network_interdc-gw_list = eclcli.network.v2.interdc_gateway:ListInterDCGateway
    network_interdc-gw_show = eclcli.network.v2.interdc_gateway:ShowInterDCGateway
    network_interdc-interface_list = eclcli.network.v2.interdc_interface:ListInterDCInterface
    network_interdc-interface_show = eclcli.network.v2.interdc_interface:ShowInterDCInterface
    network_interdc-interface_create = eclcli.network.v2.interdc_interface:CreateInterDCInterface
    network_interdc-interface_update = eclcli.network.v2.interdc_interface:SetInterDCInterface
    network_interdc-interface_delete = eclcli.network.v2.interdc_interface:DeleteInterDCInterface
    network_firewall-plan_list = eclcli.network.v2.firewall_plan:ListFirewallPlan
    network_firewall-plan_show = eclcli.network.v2.firewall_plan:ShowFirewallPlan
    network_firewall_list = eclcli.network.v2.firewall:ListFirewall
    network_firewall_show = eclcli.network.v2.firewall:ShowFirewall
    network_firewall_create = eclcli.network.v2.firewall:CreateFirewall
    network_firewall_update = eclcli.network.v2.firewall:SetFirewall
    network_firewall_delete = eclcli.network.v2.firewall:DeleteFirewall
    network_firewall_reboot = eclcli.network.v2.firewall:RebootFirewall
    network_firewall_reset-password = eclcli.network.v2.firewall:ResetPasswordFirewall
    network_firewall-interface_list = eclcli.network.v2.firewall_interface:ListFirewallInterface
    network_firewall-interface_show = eclcli.network.v2.firewall_interface:ShowFirewallInterface
    network_firewall-interface_update = eclcli.network.v2.firewall_interface:SetFirewallInterface
    network_load-balancer-plan_list = eclcli.network.v2.load_balancer_plan:ListLoadBalancerPlan
    network_load-balancer-plan_show = eclcli.network.v2.load_balancer_plan:ShowLoadBalancerPlan
    network_load-balancer_list = eclcli.network.v2.load_balancer:ListLoadBalancer
    network_load-balancer_show = eclcli.network.v2.load_balancer:ShowLoadBalancer
    network_load-balancer_create = eclcli.network.v2.load_balancer:CreateLoadBalancer
    network_load-balancer_update = eclcli.network.v2.load_balancer:SetLoadBalancer
    network_load-balancer_delete = eclcli.network.v2.load_balancer:DeleteLoadBalancer
    network_load-balancer_reboot = eclcli.network.v2.load_balancer:RebootLoadBalancer
    network_load-balancer_reset-password = eclcli.network.v2.load_balancer:ResetPasswordLoadBalancer
    network_load-balancer-interface_list = eclcli.network.v2.load_balancer_interface:ListLoadBalancerInterface
    network_load-balancer-interface_show = eclcli.network.v2.load_balancer_interface:ShowLoadBalancerInterface
    network_load-balancer-interface_update = eclcli.network.v2.load_balancer_interface:SetLoadBalancerInterface
    network_load-balancer-syslog-server_list = eclcli.network.v2.load_balancer_syslog_server:ListLoadBalancerSyslogServer
    network_load-balancer-syslog-server_show = eclcli.network.v2.load_balancer_syslog_server:ShowLoadBalancerSyslogServer
    network_load-balancer-syslog-server_create = eclcli.network.v2.load_balancer_syslog_server:CreateLoadBalancerSyslogServer
    network_load-balancer-syslog-server_delete = eclcli.network.v2.load_balancer_syslog_server:DeleteLoadBalancerSyslogServer
    network_load-balancer-syslog-server_update = eclcli.network.v2.load_balancer_syslog_server:SetLoadBalancerSyslogServer
    network_common-function-pool_list = eclcli.network.v2.common_function_pool:ListCommonFunctionPool
    network_common-function-pool_show = eclcli.network.v2.common_function_pool:ShowCommonFunctionPool
    network_common-function_list = eclcli.network.v2.common_function:ListCommonFunction
    network_common-function_show = eclcli.network.v2.common_function:ShowCommonFunction
    network_common-function-gw_list = eclcli.network.v2.common_function_gateway:ListCommonFunctionGateway
    network_common-function-gw_show = eclcli.network.v2.common_function_gateway:ShowCommonFunctionGateway
    network_common-function-gw_create = eclcli.network.v2.common_function_gateway:CreateCommonFunctionGateway
    network_common-function-gw_update = eclcli.network.v2.common_function_gateway:SetCommonFunctionGateway
    network_common-function-gw_delete = eclcli.network.v2.common_function_gateway:DeleteCommonFunctionGateway
    network_colocation-space_list = eclcli.network.v2.colocation_space:ListColoSpace
    network_colocation-space_show = eclcli.network.v2.colocation_space:ShowColoSpace
    network_colocation-physical-link_list = eclcli.network.v2.colocation_physical_link:ListColoPhysicalLink
    network_colocation-physical-link_show = eclcli.network.v2.colocation_physical_link:ShowColoPhysicalLink
    network_colocation-logical-link_list = eclcli.network.v2.colocation_logical_link:ListColoLogicalLink
    network_colocation-logical-link_show = eclcli.network.v2.colocation_logical_link:ShowColoLogicalLink
    network_colocation-logical-link_create = eclcli.network.v2.colocation_logical_link:CreateColoLogicalLink
    network_colocation-logical-link_update = eclcli.network.v2.colocation_logical_link:SetColoLogicalLink
    network_colocation-logical-link_delete = eclcli.network.v2.colocation_logical_link:DeleteColoLogicalLink
ecl.volume.v2 =
    compute_volume_create = eclcli.volume.v2.volume:CreateVolume
    compute_volume_delete = eclcli.volume.v2.volume:DeleteVolume
    compute_volume_list = eclcli.volume.v2.volume:ListVolume
    compute_volume_update = eclcli.volume.v2.volume:SetVolume
    compute_volume_show = eclcli.volume.v2.volume:ShowVolume
    compute_volume-type_list = eclcli.volume.v2.volume_type:ListVolumeType
ecl.bare.v2 =
    baremetal_server_create = eclcli.bare.v2.server:CreateServer
    baremetal_server_delete = eclcli.bare.v2.server:DeleteServer
    baremetal_server_list = eclcli.bare.v2.server:ListServer
    baremetal_server_show = eclcli.bare.v2.server:ShowServer
    baremetal_server_start = eclcli.bare.v2.server:StartServer
    baremetal_server_stop = eclcli.bare.v2.server:StopServer
    baremetal_server_reboot = eclcli.bare.v2.server:RebootServer
    baremetal_server_boot-mode_update = eclcli.bare.v2.server:UpdateBootmode
    baremetal_server_console = eclcli.bare.v2.server:GetConsoleServer
    baremetal_availability_zone_show = eclcli.bare.v2.zone:ShowZone
    baremetal_flavor_show = eclcli.bare.v2.flavor:ShowFlavor
    baremetal_flavor_list = eclcli.bare.v2.flavor:ListFlavor
    baremetal_keypair_create = eclcli.bare.v2.keypair:CreateKeypair
    baremetal_keypair_delete = eclcli.bare.v2.keypair:DeleteKeypair
    baremetal_keypair_list = eclcli.bare.v2.keypair:ListKeypair
    baremetal_keypair_show = eclcli.bare.v2.keypair:ShowKeypair
    baremetal_limit_show = eclcli.bare.v2.limit:ShowLimit
    baremetal_metadata_delete = eclcli.bare.v2.metadata:DeleteMetadata
    baremetal_metadata_list = eclcli.bare.v2.metadata:ListMetadata
    baremetal_metadata_show = eclcli.bare.v2.metadata:ShowMetadata
    baremetal_metadata_merge = eclcli.bare.v2.metadata:MergeMetadata
    baremetal_metadata_replace = eclcli.bare.v2.metadata:ReplaceMetadata
    baremetal_metadata_update = eclcli.bare.v2.metadata:UpdateMetadata
    baremetal_port_show = eclcli.bare.v2.port:ShowPort
    baremetal_port_list = eclcli.bare.v2.port:ListPort
    baremetal_stock_show = eclcli.bare.v2.stock:ShowStock
    baremetal_uefi_show = eclcli.bare.v2.uefi:ShowUEFI
    baremetal_uefi_update = eclcli.bare.v2.uefi:UpdateUEFI
    baremetal_version_show = eclcli.bare.v2.version:ShowVersion
    baremetal_version_list = eclcli.bare.v2.version:ListVersion
ecl.storage.v2 =
    storage_list = eclcli.storage.v2.storage:ListStorage
    storage_show = eclcli.storage.v2.storage:ShowStorage
    storage_create = eclcli.storage.v2.storage:CreateStorage
    storage_update = eclcli.storage.v2.storage:UpdateStorage
    storage_delete = eclcli.storage.v2.storage:DeleteStorage
    storage_volume-type_list = eclcli.storage.v2.volume_type:ListVolumeType
    storage_volume-type_show = eclcli.storage.v2.volume_type:ShowVolumeType
    storage_volume_list = eclcli.storage.v2.volume:ListVolume
    storage_volume_show = eclcli.storage.v2.volume:ShowVolume
    storage_volume_create = eclcli.storage.v2.volume:CreateVolume
    storage_volume_update = eclcli.storage.v2.volume:UpdateVolume
    storage_volume_delete = eclcli.storage.v2.volume:DeleteVolume
    storage_snapshot_list = eclcli.storage.v2.snapshot:ListSnapshot
    storage_snapshot_show = eclcli.storage.v2.snapshot:ShowSnapshot
    storage_snapshot_create = eclcli.storage.v2.snapshot:CreateSnapshot
    storage_snapshot_update = eclcli.storage.v2.snapshot:UpdateSnapshot
    storage_snapshot_delete = eclcli.storage.v2.snapshot:DeleteSnapshot
    storage_snapshot_restore = eclcli.storage.v2.snapshot:RestoreSnapshot
    storage_availability-zone_list = eclcli.storage.v2.availability_zone:ListAvailabilityZone
ecl.rca.v2 =
    rca_user_list    = eclcli.rca.v2.user:ListUser
    rca_user_show    = eclcli.rca.v2.user:ShowUser
    rca_user_create  = eclcli.rca.v2.user:CreateUser
    rca_user_update     = eclcli.rca.v2.user:SetUser
    rca_user_delete  = eclcli.rca.v2.user:DeleteUser
    rca_version_list = eclcli.rca.v2.version:ListVersion
    rca_version_show = eclcli.rca.v2.version:ShowVersion
ecl.sss.v2 =
    sss_user_list             = eclcli.sss.v2.user:ListUser
    sss_user_show             = eclcli.sss.v2.user:ShowUser
    sss_user_create           = eclcli.sss.v2.user:CreateUser
    sss_user_delete           = eclcli.sss.v2.user:DeleteUser
    sss_tenant_list           = eclcli.sss.v2.tenant:ListTenant
    sss_tenant_show           = eclcli.sss.v2.tenant:ShowTenant
    sss_tenant_create         = eclcli.sss.v2.tenant:CreateTenant
    sss_role_create           = eclcli.sss.v2.role:CreateRole
    sss_role_delete           = eclcli.sss.v2.role:DeleteRole
    sss_update-api-keypair    = eclcli.sss.v2.api_keypair:SetAPIKeypair
    sss_contract_show         = eclcli.sss.v2.contract:ShowContract
    sss_billing_show          = eclcli.sss.v2.contract:ShowBilling
    sss_iam_group_create              = eclcli.iam.v2.group:CreateGroup
    sss_iam_group_attach-role         = eclcli.iam.v2.group:AttachRole
    sss_iam_group_attach-user         = eclcli.iam.v2.group:AttachUser
    sss_iam_group_detach-role         = eclcli.iam.v2.group:DetachRole
    sss_iam_group_detach-user         = eclcli.iam.v2.group:DetachUser
    sss_iam_group_list                = eclcli.iam.v2.group:ListGroup
    sss_iam_group_delete              = eclcli.iam.v2.group:DeleteGroup
    sss_iam_role_create               = eclcli.iam.v2.role:CreateRole
    sss_iam_role_list                 = eclcli.iam.v2.role:ListRole
    sss_iam_role_delete               = eclcli.iam.v2.role:DeleteRole
    sss_iam_role_show                 = eclcli.iam.v2.role:ShowRole
    sss_iam_user_list                 = eclcli.iam.v2.user:ListUser
ecl.monitoring.v2 =
    monitor_alarm_create    = eclcli.monitoring.v2.alarm:CreateAlarm
    monitor_alarm_delete    = eclcli.monitoring.v2.alarm:DeleteAlarm
    monitor_alarm_update    = eclcli.monitoring.v2.alarm:UpdateAlarm
    monitor_alarm_list      = eclcli.monitoring.v2.alarm:ListAlarm
    monitor_alarm_show-history   = eclcli.monitoring.v2.alarm:ShowAlarmHistory
    monitor_alarm_list-history   = eclcli.monitoring.v2.alarm:ListOverallAlarmHistories
    monitor_meter_list      = eclcli.monitoring.v2.meter:ListMeter
    monitor_meter_list-statistics = eclcli.monitoring.v2.meter:ListMeterStatistics
    monitor_meter_create    = eclcli.monitoring.v2.meter:CreateMeter
    monitor_sample_list     = eclcli.monitoring.v2.sample:ListSample
    monitor_resource_list   = eclcli.monitoring.v2.resource:ListResource
    monitor_resource_show   = eclcli.monitoring.v2.resource:ShowResource
    monitor_capability_list = eclcli.monitoring.v2.capability:ListCapability
ecl.dh.v2 =
    dh_server_create = eclcli.dh.v2.server:CreateServer
    dh_server_delete = eclcli.dh.v2.server:DeleteServer
    dh_server_list = eclcli.dh.v2.server:ListServer
    dh_server_show = eclcli.dh.v2.server:ShowServer
    dh_license_create = eclcli.dh.v2.license:CreateLicense
    dh_license_delete = eclcli.dh.v2.license:DeleteLicense
    dh_license_list = eclcli.dh.v2.license:ListLicense
    dh_license-type_list = eclcli.dh.v2.license:ListLicenseType
    dh_usage_list = eclcli.dh.v2.usage:ListUsage
    dh_usage-history_show = eclcli.dh.v2.usage:ShowUsageHistory
ecl.provider_connectivity.v1 =
    icc_tenant-connection-request_list = eclcli.provider_connectivity.v1.tenant_connection_request:ListTenantConnecionRequest
    icc_tenant-connection-request_show = eclcli.provider_connectivity.v1.tenant_connection_request:ShowTenantConnectionRequest
    icc_tenant-connection-request_create = eclcli.provider_connectivity.v1.tenant_connection_request:CreateTenantConnectionRequest
    icc_tenant-connection-request_update = eclcli.provider_connectivity.v1.tenant_connection_request:UpdateTenantConnectionRequest
    icc_tenant-connection-request_delete = eclcli.provider_connectivity.v1.tenant_connection_request:DeleteTenantConnectionRequest
    icc_tenant-connection_list = eclcli.provider_connectivity.v1.tenant_connection:ListTenantConnecion
    icc_tenant-connection_show = eclcli.provider_connectivity.v1.tenant_connection:ShowTenantConnection
    icc_tenant-connection_create = eclcli.provider_connectivity.v1.tenant_connection:CreateTenantConnection
    icc_tenant-connection_update = eclcli.provider_connectivity.v1.tenant_connection:UpdateTenantConnection
    icc_tenant-connection_delete = eclcli.provider_connectivity.v1.tenant_connection:DeleteTenantConnection
    icc_address-assignment_list = eclcli.provider_connectivity.v1.address_assignment:ListAddressAssignment
    icc_network_show = eclcli.provider_connectivity.v1.address_assignment:ShowICCNetwork
    icc_subnet_list = eclcli.provider_connectivity.v1.address_assignment:ListICCSubnet
    icc_subnet_show = eclcli.provider_connectivity.v1.address_assignment:ShowICCSubnet
ecl.dns.v2 =
    dns_zone_create = eclcli.dns.v2.zone:CreateZone
    dns_zone_list = eclcli.dns.v2.zone:ListZone
    dns_zone_delete = eclcli.dns.v2.zone:DeleteZone
    dns_zone_show = eclcli.dns.v2.zone:ShowZone
    dns_zone_update = eclcli.dns.v2.zone:UpdateZone
    dns_nameserver_show = eclcli.dns.v2.nameserver:ShowNameServer
    dns_recordset_create = eclcli.dns.v2.record:CreateRecordSet
    dns_recordset_list = eclcli.dns.v2.record:ListRecordSet
    dns_recordset_delete = eclcli.dns.v2.record:DeleteRecordSet
    dns_recordset_multi_delete = eclcli.dns.v2.record:DeleteMultipleRecordSets
    dns_recordset_show = eclcli.dns.v2.record:ShowRecordSet
    dns_recordset_update = eclcli.dns.v2.record:UpdateRecordSet
ecl.vnf.v1 =
    vna_appliance_list = eclcli.vnf.v1.virtual_network_appliance:ListVirtualNetworkAppliance
    vna_appliance_show = eclcli.vnf.v1.virtual_network_appliance:ShowVirtualNetworkAppliance
    vna_appliance_create = eclcli.vnf.v1.virtual_network_appliance:CreateVirtualNetworkAppliance
    vna_appliance_delete = eclcli.vnf.v1.virtual_network_appliance:DeleteVirtualNetworkAppliance

    vna_appliance_meta_update = eclcli.vnf.v1.virtual_network_appliance:UpdateVirtualNetworkApplianceMetaData
    vna_appliance_interface_update = eclcli.vnf.v1.virtual_network_appliance:UpdateVirtualNetworkApplianceInterfaces
    vna_appliance_aap_update = eclcli.vnf.v1.virtual_network_appliance:UpdateVirtualNetworkApplianceAAPs

    vna_appliance_start = eclcli.vnf.v1.virtual_network_appliance:StartVirtualNetworkAppliance
    vna_appliance_stop = eclcli.vnf.v1.virtual_network_appliance:StopVirtualNetworkAppliance
    vna_appliance_restart = eclcli.vnf.v1.virtual_network_appliance:RestartVirtualNetworkAppliance
    vna_appliance_reset-password = eclcli.vnf.v1.virtual_network_appliance:ResetPasswordVirtualNetworkAppliance
    vna_appliance_console-url_show = eclcli.vnf.v1.virtual_network_appliance:ShowVirtualNetworkApplianceConsole

    vna_plan_list = eclcli.vnf.v1.virtual_network_appliance_plan:ListVirtualNetworkAppliancePlan
    vna_plan_show = eclcli.vnf.v1.virtual_network_appliance_plan:ShowVirtualNetworkAppliancePlan

    vna_operation_list = eclcli.vnf.v1.operation:ListOperation
    vna_operation_show = eclcli.vnf.v1.operation:ShowOperation
ecl.mlb.v1 =
    mlb_certificate_list = eclcli.mlb.v1.mlb_certificate:ListCertificate
    mlb_certificate_show = eclcli.mlb.v1.mlb_certificate:ShowCertificate
    mlb_certificate_create = eclcli.mlb.v1.mlb_certificate:CreateCertificate
    mlb_certificate_delete = eclcli.mlb.v1.mlb_certificate:DeleteCertificate
    mlb_certificate_update = eclcli.mlb.v1.mlb_certificate:UpdateCertificate
    mlb_certificate_upload = eclcli.mlb.v1.mlb_certificate:UploadCertificate

    mlb_health-monitor_list = eclcli.mlb.v1.mlb_health_monitor:ListHealthMonitor
    mlb_health-monitor_show = eclcli.mlb.v1.mlb_health_monitor:ShowHealthMonitor
    mlb_health-monitor_create = eclcli.mlb.v1.mlb_health_monitor:CreateHealthMonitor
    mlb_health-monitor_delete = eclcli.mlb.v1.mlb_health_monitor:DeleteHealthMonitor
    mlb_health-monitor_update = eclcli.mlb.v1.mlb_health_monitor:UpdateHealthMonitor
    mlb_health-monitor_create-staged = eclcli.mlb.v1.mlb_health_monitor:CreateStagedHealthMonitorConfiguration
    mlb_health-monitor_cancel-staged = eclcli.mlb.v1.mlb_health_monitor:CancelStagedHealthMonitorConfiguration
    mlb_health-monitor_show-staged = eclcli.mlb.v1.mlb_health_monitor:ShowStagedHealthMonitorConfiguration
    mlb_health-monitor_update-staged = eclcli.mlb.v1.mlb_health_monitor:UpdateStagedHealthMonitorConfiguration

    mlb_listener_list = eclcli.mlb.v1.mlb_listener:ListListener
    mlb_listener_show = eclcli.mlb.v1.mlb_listener:ShowListener
    mlb_listener_create = eclcli.mlb.v1.mlb_listener:CreateListener
    mlb_listener_delete = eclcli.mlb.v1.mlb_listener:DeleteListener
    mlb_listener_update = eclcli.mlb.v1.mlb_listener:UpdateListener
    mlb_listener_create-staged = eclcli.mlb.v1.mlb_listener:CreateStagedListenerConfiguration
    mlb_listener_cancel-staged = eclcli.mlb.v1.mlb_listener:CancelStagedListenerConfiguration
    mlb_listener_show-staged = eclcli.mlb.v1.mlb_listener:ShowStagedListenerConfiguration
    mlb_listener_update-staged = eclcli.mlb.v1.mlb_listener:UpdateStagedListenerConfiguration

    mlb_load-balancer_list = eclcli.mlb.v1.mlb_load_balancer:ListLoadBalancer
    mlb_load-balancer_show = eclcli.mlb.v1.mlb_load_balancer:ShowLoadBalancer
    mlb_load-balancer_create = eclcli.mlb.v1.mlb_load_balancer:CreateLoadBalancer
    mlb_load-balancer_delete = eclcli.mlb.v1.mlb_load_balancer:DeleteLoadBalancer
    mlb_load-balancer_update = eclcli.mlb.v1.mlb_load_balancer:UpdateLoadBalancer
    mlb_load-balancer_create-staged = eclcli.mlb.v1.mlb_load_balancer:CreateStagedLoadBalancerConfiguration
    mlb_load-balancer_cancel-staged = eclcli.mlb.v1.mlb_load_balancer:CancelStagedLoadBalancerConfiguration
    mlb_load-balancer_show-staged = eclcli.mlb.v1.mlb_load_balancer:ShowStagedLoadBalancerConfiguration
    mlb_load-balancer_update-staged = eclcli.mlb.v1.mlb_load_balancer:UpdateStagedLoadBalancerConfiguration
    mlb_load-balancer_action = eclcli.mlb.v1.mlb_load_balancer:ActionLoadBalancer

    mlb_operation_list = eclcli.mlb.v1.mlb_operation:ListOperation
    mlb_operation_show = eclcli.mlb.v1.mlb_operation:ShowOperation

    mlb_plan_list = eclcli.mlb.v1.mlb_plan:ListPlan
    mlb_plan_show = eclcli.mlb.v1.mlb_plan:ShowPlan

    mlb_policy_list = eclcli.mlb.v1.mlb_policy:ListPolicy
    mlb_policy_show = eclcli.mlb.v1.mlb_policy:ShowPolicy
    mlb_policy_create = eclcli.mlb.v1.mlb_policy:CreatePolicy
    mlb_policy_delete = eclcli.mlb.v1.mlb_policy:DeletePolicy
    mlb_policy_update = eclcli.mlb.v1.mlb_policy:UpdatePolicy
    mlb_policy_create-staged = eclcli.mlb.v1.mlb_policy:CreateStagedPolicyConfiguration
    mlb_policy_cancel-staged = eclcli.mlb.v1.mlb_policy:CancelStagedPolicyConfiguration
    mlb_policy_show-staged = eclcli.mlb.v1.mlb_policy:ShowStagedPolicyConfiguration
    mlb_policy_update-staged = eclcli.mlb.v1.mlb_policy:UpdateStagedPolicyConfiguration

    mlb_route_list = eclcli.mlb.v1.mlb_route:ListRoute
    mlb_route_show = eclcli.mlb.v1.mlb_route:ShowRoute
    mlb_route_create = eclcli.mlb.v1.mlb_route:CreateRoute
    mlb_route_delete = eclcli.mlb.v1.mlb_route:DeleteRoute
    mlb_route_update = eclcli.mlb.v1.mlb_route:UpdateRoute
    mlb_route_create-staged = eclcli.mlb.v1.mlb_route:CreateStagedRouteConfiguration
    mlb_route_cancel-staged = eclcli.mlb.v1.mlb_route:CancelStagedRouteConfiguration
    mlb_route_show-staged = eclcli.mlb.v1.mlb_route:ShowStagedRouteConfiguration
    mlb_route_update-staged = eclcli.mlb.v1.mlb_route:UpdateStagedRouteConfiguration

    mlb_rule_list = eclcli.mlb.v1.mlb_rule:ListRule
    mlb_rule_show = eclcli.mlb.v1.mlb_rule:ShowRule
    mlb_rule_create = eclcli.mlb.v1.mlb_rule:CreateRule
    mlb_rule_delete = eclcli.mlb.v1.mlb_rule:DeleteRule
    mlb_rule_update = eclcli.mlb.v1.mlb_rule:UpdateRule
    mlb_rule_create-staged = eclcli.mlb.v1.mlb_rule:CreateStagedRuleConfiguration
    mlb_rule_cancel-staged = eclcli.mlb.v1.mlb_rule:CancelStagedRuleConfiguration
    mlb_rule_show-staged = eclcli.mlb.v1.mlb_rule:ShowStagedRuleConfiguration
    mlb_rule_update-staged = eclcli.mlb.v1.mlb_rule:UpdateStagedRuleConfiguration

    mlb_system-update_list = eclcli.mlb.v1.mlb_system_update:ListSystemUpdate
    mlb_system-update_show = eclcli.mlb.v1.mlb_system_update:ShowSystemUpdate

    mlb_target-group_list = eclcli.mlb.v1.mlb_target_group:ListTargetGroup
    mlb_target-group_show = eclcli.mlb.v1.mlb_target_group:ShowTargetGroup
    mlb_target-group_create = eclcli.mlb.v1.mlb_target_group:CreateTargetGroup
    mlb_target-group_delete = eclcli.mlb.v1.mlb_target_group:DeleteTargetGroup
    mlb_target-group_update = eclcli.mlb.v1.mlb_target_group:UpdateTargetGroup
    mlb_target-group_create-staged = eclcli.mlb.v1.mlb_target_group:CreateStagedTargetGroupConfiguration
    mlb_target-group_cancel-staged = eclcli.mlb.v1.mlb_target_group:CancelStagedTargetGroupConfiguration
    mlb_target-group_show-staged = eclcli.mlb.v1.mlb_target_group:ShowStagedTargetGroupConfiguration
    mlb_target-group_update-staged = eclcli.mlb.v1.mlb_target_group:UpdateStagedTargetGroupConfiguration

    mlb_tls-policy_list = eclcli.mlb.v1.mlb_tls_policy:ListTlsPolicy
    mlb_tls-policy_show = eclcli.mlb.v1.mlb_tls_policy:ShowTlsPolicy
ecl.security_order.v3 =
    security_device_create = eclcli.security_order.v3.device:CreateDevice
    security_device_update = eclcli.security_order.v3.device:UpdateDevice
    security_device_delete = eclcli.security_order.v3.device:DeleteDevice
    security_device_show_status = eclcli.security_order.v3.device:ShowStatus
    security_device_list = eclcli.security_order.v3.device:ListDevices
    security_ha-device_create = eclcli.security_order.v3.ha_device:CreateDevice
    security_ha-device_update = eclcli.security_order.v3.ha_device:UpdateDevice
    security_ha-device_delete = eclcli.security_order.v3.ha_device:DeleteDevice
    security_ha-device_show_status = eclcli.security_order.v3.ha_device:ShowStatus
    security_ha-device_list = eclcli.security_order.v3.ha_device:ListDevices
    security_waf_create = eclcli.security_order.v3.waf:CreateDevice
    security_waf_update = eclcli.security_order.v3.waf:UpdateDevice
    security_waf_delete = eclcli.security_order.v3.waf:DeleteDevice
    security_waf_show_status = eclcli.security_order.v3.waf:ShowStatus
    security_waf_list = eclcli.security_order.v3.waf:ListDevices
    security_host-based-security_order = eclcli.security_order.v3.host_based_security:OrderApp
    security_host-based-security_change_menu = eclcli.security_order.v3.host_based_security:ChangeAppMenu
    security_host-based-security_change_quantity = eclcli.security_order.v3.host_based_security:ChangeAppQuantity
    security_host-based-security_cancel = eclcli.security_order.v3.host_based_security:CancelApp
    security_host-based-security_show_status = eclcli.security_order.v3.host_based_security:ShowStatus
    security_host-based-security_show_info = eclcli.security_order.v3.host_based_security:ShowInfo

[egg_info]
tag_build =
tag_date = 0